# license-header-pre-commit

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Makefile  README.md  license-header.txt  license_header_hook.py  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
.kiro/steering/: product.md  structure.md  tech.md
tests/: test_license_header_hook.py
